--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,5 +3,75 @@
 
 <h1>Dashboard Page</h1>
 
+<!-- <h1>{{dash}}</h1> -->
+<!-- <div class="continer"> -->
+<div class="cotainer">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 ">
+        <div class="col">
+            <canvas id="bar-chart" width="800" height="450"></canvas>
+        </div>
+
+
+        <div class="col">
+            <canvas id="bar-chart1" width="800" height="450"></canvas>
+        </div>
+
+
+        <div class="col">
+            <canvas id="line-chart" width="800" height="450"></canvas>
+        </div>
+
+
+        <div class="col">
+            <canvas id="line-chart1" width="800" height="450"></canvas>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="chart-container">
+                    <canvas id="bar-chart" width="800" height="450"></canvas>
+                </div>
+            </div>
+    
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="chart-container">
+                    <canvas id="bar-chart1" width="800" height="450"></canvas>
+                </div>
+            </div>
+    
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="chart-container">
+                    <canvas id="line-chart" width="800" height="450"></canvas>
+                </div>
+            </div>
+    
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="chart-container">
+                    <canvas id="line-chart1" width="800" height="450"></canvas>
+                </div>
+            </div>
+    
+        </div>
+    
+    
+    
+    </div> -->
+<!-- <canvas id="bar-chart1" width="800" height="450"></canvas> -->
+
+
+
+
+<!-- </div> -->
 
 {% endblock content %}
