--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-
 /*** Spinner ***/
 /* #spinner {
     background-color: rgb(20, 68, 136);
@@ -21,13 +20,19 @@
 
 /*** Navbar ***/
 
-.nav1{
+body {
+    background-color: azure;
+}
+
+.nav1 {
     padding-top: 10px;
     background-color: rgb(65, 62, 62);
 }
-.text_btn:hover{
-    color: rgb(13, 13, 13); 
+
+.text_btn:hover {
+    color: rgb(13, 13, 13);
 }
+
 .sticky-top {
     top: -100px;
     transition: .5s;
@@ -42,6 +47,15 @@
     outline: none;
 }
 
+/* .container {
+    margin: 3px 3px;
+    border-radius: 4px;
+} */
+
+/* a:hover{
+    background-color: blue;
+} */
+
 /* .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
@@ -49,30 +63,118 @@
 
 
 
-/* .navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    vertical-align: middle;
-    margin-left: 8px;
+
+
+
+.call_text_main {
+    width: 100%;
+    /* float: left; */
+    background-color: #ffffff;
+    height: auto;
+    padding: 10px 0px;
+
 }
-@media (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
-        display: block;
-        border: none;
-        margin-top: 0;
-        top: 150%;
-        opacity: 0;
-        visibility: hidden;
-        transition: .5s;
-    }
 
-    .navbar .nav-item:hover .dropdown-menu {
-        top: 100%;
-        visibility: visible;
-        transition: .5s;
-        opacity: 1;
-    }
-} */
+.call_taital {
+    width: 100%;
+    display: flex;
 
+}
+
+.call_text {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.call_text a {
+    width: 100%;
+    float: left;
+    color: #0D6EFD;
+    font-size: 16px;
+    padding: 5px 20px 0px 20px;
+    text-decoration: none;
+}
+
+.call_text a:hover {
+    color: #1d1d1d;
+}
+
+.padding_left_15 {
+    padding-left: 10px;
+}
+
+.header_social_icon {
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.header_social_icon ul {
+    margin: 0px;
+    padding: 0px;
+}
+
+.header_social_icon li {
+    float: left;
+    list-style-type: none;
+}
+
+.header_social_icon li a {
+    float: left;
+    color: #0D6EFD;
+    font-size: 20px;
+    text-align: center;
+    padding: 0px 8px;
+
+}
+
+.header_social_icon li a:hover {
+    color: #1d1d1d;
+}
+.nav_text li a:hover{
+    color: #ffffff;
+}
+
+.serach_icon {
+    width: 100%;
+    float: left;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.serach_icon a {
+    color: #ffffff;
+}
+
+.serach_icon a:hover {
+    color: #1d1d1d;
+}
+
+/*** Contact Start ***/
+.contact-detail::before {
+    position: absolute;
+    content: "";
+    height: 50%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgb(210, 243, 235, 1), rgba(230, 250, 245, .3)), url(/static/background.jpg) center center no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    z-index: -1;
+}
+
+.contact-map {
+    background: rgb(52,58,64);
+}
+
+.contact-form {
+    background: rgb(52,58,64);
+}
+
+.h5{
+    text-decoration: none;
+}
+/*** Contact End ***/
