--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,96 @@
 {% extends "layout.html"%}
 {% block content %}
 
-<h1>home page</h1>
-<h1>m</h1>
 
-{% endblock content %}
+
+<!-- Contact Start -->
+<div class="container-fluid py-5 mb-5">
+    <div class="container">
+        <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+            <h5 class="text-primary">Get In Touch</h5>
+            <h1 class="mb-3">Contact for any query</h1>
+            <!-- <p class="mb-2">The contact form is currently inactive. Get a functional and working contact form with Ajax
+                & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a
+                    href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
+        </div>
+        <div class="contact-detail position-relative p-5">
+            <div class="row g-5 mb-5 justify-content-center">
+                <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".3s">
+                    <div class="d-flex bg-light p-3 rounded">
+                        <div class="flex-shrink-0 btn-square bg-secondary rounded-circle"
+                            style="width: 64px; height: 64px;">
+                            <i class="fa-solid fa-location-dot"
+                                style="color: #ffffff; margin-left: 39%;margin-top: 37%;"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-primary">Address</h4>
+                            <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Corner House Building, Kimathi St, Nairobi</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".5s">
+                    <div class="d-flex bg-light p-3 rounded">
+                        <div class="flex-shrink-0 btn-square bg-secondary rounded-circle"
+                            style="width: 64px; height: 64px;">
+                            <i class="fa fa-phone text-white" style="margin-left: 37%;margin-top: 37%;"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-primary">Call Us</h4>
+                            <a class="h5" href="tel:+0123456789" target="_blank">+012 3456 7890</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".7s">
+                    <div class="d-flex bg-light p-3 rounded">
+                        <div class="flex-shrink-0 btn-square bg-secondary rounded-circle"
+                            style="width: 64px; height: 64px;">
+                            <i class="fa fa-envelope text-white" style="margin-left: 37%;margin-top: 37%;"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-primary">Email Us</h4>
+                            <a class="h5" href="https://mail.google.com/" target="_blank">alrdaey77@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay=".3s">
+                    <div class="p-5 h-100 rounded contact-map">
+                        <!-- <iframe class="rounded w-100 h-100"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.4710403339755!2d-73.82241512404069!3d40.685622471397615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c26749046ee14f%3A0xea672968476d962c!2s123rd%20St%2C%20Queens%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1686493221834!5m2!1sen!2sbd"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+
+                        <iframe class="rounded w-100 h-100"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.814767784275!2d36.82116377457223!3d-1.2851097987026676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11d9c727b643%3A0xfe5775e56073fb67!2sTechCamp%20Kenya!5e0!3m2!1sen!2ske!4v1710692512424!5m2!1sen!2ske"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
+                    <div class="p-5 rounded contact-form">
+                        <div class="mb-4">
+                            <input type="text" class="form-control border-0 py-3" placeholder="Your Name">
+                        </div>
+                        <div class="mb-4">
+                            <input type="email" class="form-control border-0 py-3" placeholder="Your Email">
+                        </div>
+                        <div class="mb-4">
+                            <input type="text" class="form-control border-0 py-3" placeholder="Project">
+                        </div>
+                        <div class="mb-4">
+                            <textarea class="w-100 form-control border-0 py-3" rows="6" cols="10"
+                                placeholder="Message"></textarea>
+                        </div>
+                        <div class="text-start">
+                            <button class="btn bg-primary text-white py-3 px-5" type="button">Send Message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Contact End -->
+
+{% endblock %}
