--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
     <!-- CSS File link -->
     <link rel="stylesheet" href="/static/style.css">
 
@@ -37,7 +37,37 @@
     <!-- Spinner End -->
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-primary text-white d-none d-lg-flex">
+    <div class="container-fluid  text-white d-none d-lg-flex">
+        <div class="call_text_main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="call_text"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span
+                                    class="padding_left_15">Location</span></a></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="header_social_icon">
+                            <ul>
+                                <li><a href="https://www.facebook.com/alrdaey/" target="_blank"><i
+                                            class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://twitter.com/HunterAhmed0" target="_blank"><i
+                                            class="fab fa-twitter"></i></li>
+                                <li><a href="https://www.linkedin.com/in/hunter-ahmed-361460243/" target="_blank"><i
+                                            class="fab fa-linkedin-in"></i></a></li>
+                                <!-- <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li> -->
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span
+                                    class="padding_left_15">(+71) 8522369417</span></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="container-fluid bg-primary text-white d-none d-lg-flex">
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="/home">
@@ -61,13 +91,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Topbar End -->
 
     <!-- Navbar Start -->
-    <div class="container-fluid bg-white sticky-top">
+
+    <div class="container-fluid bg-primary sticky-top">
         <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
+            <nav class="navbar navbar-expand-lg bg-primary navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
                     <h1 class="fw-bold m-0">Myduka</h1>
                 </a>
@@ -76,41 +107,48 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/home">Home</a>
-                            </li>
-                            <!-- <li>
+                    <div class="nav_text">
+                        <div class="navbar-nav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                                </li>
+                                <!-- <li>
                                 <a href="about.html" class="nav-item nav-link">About</a>
                             </li> -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="/products">Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/sales">Sales</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/dashboard">Dashboard</a>
-                            </li>
-                            
-                        </ul>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <!-- <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/products">Products</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/sales">Sales</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/register">Register</a>
+                                </li><li class="nav-item">
+                                    <a class="nav-link" href="/login">Login</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a> -->
+                        <!-- <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
                                 <a href="feature.html" class="dropdown-item">Features</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="quote.html" class="dropdown-item">Quotation</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div> -->
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <!-- </div> -->
+                        <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
                     </div>
                 </div>
             </nav>
         </div>
     </div>
+
     <!-- Navbar End -->
 
     {% block content %} {% endblock %}
@@ -129,6 +167,175 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
+    <!-- Chart.js link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <div class="continer">
+        <script>
+            new Chart(document.getElementById("bar-chart"), {
+                type: 'bar',
+                data: {
+                    labels: {{ names | safe}},
+                datasets: [
+                {
+                    label: "Sales",
+                    backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#B02394", "#CC9A0A", "#361674"],
+                    data: {{ value | safe }}
+                    }
+            ]
+            },
+                options: {
+                legend: { display: false },
+                title: {
+                    display: true,
+                    text: 'Sales per product'
+                }
+            }
+        });
+
+            new Chart(document.getElementById("bar-chart1"), {
+                type: 'bar',
+                data: {
+                    labels: {{ names_profit | safe }},
+                datasets: [
+                {
+                    label: "PROFITS",
+                    backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#B02394", "#CC9A0A", "#361674"],
+                    data: {{ value_profit | safe}}
+                }
+            ]
+            },
+                options: {
+                legend: { display: false },
+                title: {
+                    display: true,
+                    text: 'Profit per products'
+                }
+            }
+        });
+
+            // new Chart(document.getElementById("line-chart1"), {
+            //     type: 'line',
+            //     data: {
+            //         labels: {{ names_profit | safe}},
+            //         datasets: [{
+            //             data: {{ value_profit | safe}},
+            //             label: "Africa",
+            //             borderColor: "#3e95cd",
+            //             fill: true
+            //         }, {
+            //             data: [282, 350, 411, 502, 635, 809, 947, 1402, 3700, 5267],
+            //             label: "Asia",
+            //             borderColor: "#8e5ea2",
+            //             fill: false
+            //         }, {
+            //             data: [168, 170, 178, 190, 203, 276, 408, 547, 675, 734],
+            //             label: "Europe",
+            //             borderColor: "#3cba9f",
+            //             fill: false
+            //         }, {
+            //             data: [40, 20, 10, 16, 24, 38, 74, 167, 508, 784],
+            //             label: "Latin America",
+            //             borderColor: "#e8c3b9",
+            //             fill: false
+            //         }, {
+            //             data: [6, 3, 2, 2, 7, 26, 82, 172, 312, 433],
+            //             label: "North America",
+            //             borderColor: "#c45850",
+            //             fill: false
+            //         }
+            //         ]
+            //     },
+            //     options: {
+            //         title: {
+            //             display: true,
+            //             text: 'World population per region (in millions)'
+            //         }
+            //     }
+            // });
+
+            new Chart(document.getElementById("line-chart"), {
+                type: 'line',
+                data: {
+                    labels: {{ s_name | safe}},
+                datasets: [{
+                    data: {{ v_value | safe}},
+                label: "SALES",
+                borderColor: "#3e95cd",
+                fill: true
+      },
+                //   { 
+                //     data: [282,350,411,502,635,809,947,1402,3700,5267],
+                //     label: "Asia",
+                //     borderColor: "#8e5ea2",
+                //     fill: false
+                //   }, { 
+                //     data: [168,170,178,190,203,276,408,547,675,734],
+                //     label: "Europe",
+                //     borderColor: "#3cba9f",
+                //     fill: false
+                //   }, { 
+                //     data: [40,20,10,16,24,38,74,167,508,784],
+                //     label: "Latin America",
+                //     borderColor: "#e8c3b9",
+                //     fill: false
+                //   }, { 
+                //     data: [6,3,2,2,7,26,82,172,312,433],
+                //     label: "North America",
+                //     borderColor: "#c45850",
+                //     fill: false
+                //   }
+            ]
+  },
+                options: {
+                title: {
+                    display: true,
+                    text: 'Sales per day'
+                }
+            }
+});
+
+            new Chart(document.getElementById("line-chart1"), {
+                type: 'line',
+                data: {
+                    labels: {{ pro_name | safe}},
+                datasets: [{
+                    data: {{ pro_value | safe}},
+                label: "PROFITS",
+                borderColor: "#3cba9f",
+                fill: false
+      },
+                //   { 
+                //     data: [282,350,411,502,635,809,947,1402,3700,5267],
+                //     label: "Asia",
+                //     borderColor: "#8e5ea2",
+                //     fill: false
+                //   }, { 
+                //     data: [168,170,178,190,203,276,408,547,675,734],
+                //     label: "Europe",
+                //     borderColor: "#3cba9f",
+                //     fill: false
+                //   }, { 
+                //     data: [40,20,10,16,24,38,74,167,508,784],
+                //     label: "Latin America",
+                //     borderColor: "#e8c3b9",
+                //     fill: false
+                //   }, { 
+                //     data: [6,3,2,2,7,26,82,172,312,433],
+                //     label: "North America",
+                //     borderColor: "#c45850",
+                //     fill: false
+                //   }
+            ]
+  },
+                options: {
+                title: {
+                    display: true,
+                    text: 'Profit per day'
+                }
+            }
+});
+        </script>
+    </div>
     <!-- Javascript file link -->
 </body>
 
