--- a/templates/products.html
+++ b/templates/products.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h3>Products Table</h3>
+
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
     style="margin-left: 45%">
     Add New Item
@@ -12,7 +13,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Add Products</h1>
 
             </div>
             <div class="modal-body">
